--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id("org.jetbrains.kotlin.plugin.serialization") version("1.6.10")
     id("dev.architectury.architectury-pack200") version("0.1.3")
     id("org.jetbrains.kotlin.jvm") version("1.6.10")
-    id("gg.essential.loom") version("0.10.0.1")
+    id("cc.woverflow.loom") version("0.10.6")
     id("java")
 }
 
@@ -51,9 +51,7 @@ configurations {
 }
 
 repositories {
-    mavenCentral()
-    maven { url("https://repo.sk1er.club/repository/maven-public/") }
-    maven { url("https://repo.spongepowered.org/maven/") }
+    maven { url("https://repo.woverflow.cc/") }
 }
 
 dependencies {
@@ -67,7 +65,7 @@ dependencies {
     }
 
     shade("gg.essential:loader-launchwrapper:1.1.3")
-    compileOnly("gg.essential:essential-1.8.9-forge:1788")
+    compileOnly("gg.essential:essential-1.8.9-forge:1933")
 }
 
 jar {
