--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,12 @@ plugins {
     id("org.jetbrains.kotlin.plugin.serialization") version("1.6.10")
     id("dev.architectury.architectury-pack200") version("0.1.3")
     id("org.jetbrains.kotlin.jvm") version("1.6.10")
-    id("gg.essential.loom") version("0.10.0.1")
+    id("gg.essential.loom") version("0.10.0.3")
     id("java")
 }
 
 archivesBaseName = "SkyblockClient-Updater"
-version = "1.2.2"
+version = "1.2.3"
 group = "mynameisjeff"
 
 java.sourceCompatibility = JavaVersion.VERSION_1_8
@@ -61,7 +61,7 @@ dependencies {
     mappings("de.oceanlabs.mcp:mcp_stable:22-1.8.9")
     forge("net.minecraftforge:forge:1.8.9-11.15.1.2318-1.8.9")
 
-    shade("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2") {
+    shade('org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3') {
         exclude module: "kotlin-stdlib"
         exclude module: "kotlin-stdlib-jdk8"
     }
