--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,19 @@
 plugins {
-    id("org.jetbrains.kotlin.plugin.serialization") version("1.6.10")
-    id("dev.architectury.architectury-pack200") version("0.1.3")
-    id("org.jetbrains.kotlin.jvm") version("1.6.10")
-    id("gg.essential.loom") version("0.10.0.3")
+    id("org.jetbrains.kotlin.plugin.serialization") version "1.6.10"
+    id("net.kyori.blossom") version "1.3.0"
+    id("dev.architectury.architectury-pack200") version "0.1.3"
+    id("org.jetbrains.kotlin.jvm") version "1.6.10"
+    id("gg.essential.loom") version "0.10.0.3"
     id("java")
 }
 
 archivesBaseName = "SkyblockClient-Updater"
-version = "1.2.4"
+version = "1.2.5"
 group = "mynameisjeff"
+
+blossom {
+    replaceToken("@VERSION@", version)
+}
 
 java.sourceCompatibility = JavaVersion.VERSION_1_8
 java.targetCompatibility = JavaVersion.VERSION_1_8
