--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 archivesBaseName = "SkyblockClient-Updater"
-version = "1.2.6"
+version = "1.2.7"
 group = "mynameisjeff"
 
 java.sourceCompatibility = JavaVersion.VERSION_1_8
@@ -67,7 +67,7 @@ dependencies {
     }
 
     shade("gg.essential:loader-launchwrapper:1.1.3")
-    compileOnly("gg.essential:essential-1.8.9-forge:1788")
+    compileOnly("gg.essential:essential-1.8.9-forge:4479+ge389e52d8")
 }
 
 jar {
