--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 plugins {
-    id("org.jetbrains.kotlin.plugin.serialization") version "1.6.10"
+    id("org.jetbrains.kotlin.plugin.serialization") version "1.7.10"
     id("dev.architectury.architectury-pack200") version "0.1.3"
-    id("org.jetbrains.kotlin.jvm") version "1.6.10"
-    id("gg.essential.loom") version "0.10.0.3"
+    id("org.jetbrains.kotlin.jvm") version "1.7.10"
+    id("gg.essential.loom") version "0.10.0.4"
     id("java")
 }
 
 archivesBaseName = "SkyblockClient-Updater"
-version = "1.3.0"
+version = "1.3.1"
 group = "mynameisjeff"
 
 java.sourceCompatibility = JavaVersion.VERSION_1_8
@@ -82,7 +82,10 @@ jar {
     }
 
     manifest.attributes(
-            "ModSide": "CLIENT"
+            "ModSide": "CLIENT",
+            "ForceLoadAsMod": true,
+            "TweakOrder": "0",
+            "TweakClass": "gg.essential.loader.stage0.EssentialSetupTweaker"
     )
 }
 
