--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ loom {
 
     runConfigs {
         client {
+            vmArgs.remove("-XstartOnFirstThread")
             ideConfigGenerated = true
         }
     }
