--- a/build.gradle
+++ b/build.gradle
@@ -62,13 +62,8 @@ dependencies {
     mappings("de.oceanlabs.mcp:mcp_stable:22-1.8.9")
     forge("net.minecraftforge:forge:1.8.9-11.15.1.2318-1.8.9")
 
-    shade('org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3') {
-        exclude module: "kotlin-stdlib"
-        exclude module: "kotlin-stdlib-jdk8"
-    }
-
     shade("gg.essential:loader-launchwrapper:1.1.3")
-    compileOnly("gg.essential:essential-1.8.9-forge:4479+ge389e52d8")
+    compileOnly("gg.essential:essential-1.8.9-forge:10851+g8bc091ce9")
 }
 
 jar {
